--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,10 @@ inputs:
     description: 'Body of comment'
     required: true
     default: ''
+  allow_duplicates:  # id of input
+    description: 'Allow duplicate comments if True'
+    required: false
+    default: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
